--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "predeploy": "npm run build",
     "deploy": "npx gh-pages -d dist"
   },
+  "dependencies": {
+    "react": "latest",
+    "react-dom": "latest"
+  },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types.react": "^18.2.66",
+    "@types.react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "gh-pages": "^6.1.1", 
+    "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
   }
 }
